--- a/.azure-pipelines/main.yml
+++ b/.azure-pipelines/main.yml
@@ -1,5 +1,7 @@
 trigger:
 - main
+pr:
+- main
 
 pool:
   vmImage: 'ubuntu-latest'
@@ -9,17 +11,20 @@ variables:
 
 steps:
 - task: DotNetCoreCLI@2
+  name : 'Restore'
   inputs:
     command: 'restore'
     projects: '**/*.csproj'
 
 - task: DotNetCoreCLI@2
+  name : 'Build'
   inputs:
     command: 'build'
     projects: '**/*.csproj'
     arguments: '--configuration $(buildConfiguration)'
 
 - task: DotNetCoreCLI@2
+  name: 'Test'
   inputs:
     command: 'test'
     projects: '**/*Tests.csproj'
@@ -33,9 +38,9 @@ steps:
     failTaskOnFailedTests: true
 
 - task: DotNetCoreCLI@2
+  name: 'Publish'
   inputs:
     command: 'publish'
-    publishWebProjects: True
     arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
     zipAfterPublish: True
 
