--- a/.azure-pipelines/main.yml
+++ b/.azure-pipelines/main.yml
@@ -1,5 +1,9 @@
 trigger:
 - main
+- gh-readonly-queue/*
+
+pr:
+- main
 
 pool:
   vmImage: 'ubuntu-latest'
@@ -9,17 +13,20 @@ variables:
 
 steps:
 - task: DotNetCoreCLI@2
+  name : 'Restore'
   inputs:
     command: 'restore'
     projects: '**/*.csproj'
 
 - task: DotNetCoreCLI@2
+  name : 'Build'
   inputs:
     command: 'build'
     projects: '**/*.csproj'
     arguments: '--configuration $(buildConfiguration)'
 
 - task: DotNetCoreCLI@2
+  name: 'Test'
   inputs:
     command: 'test'
     projects: '**/*Tests.csproj'
@@ -31,13 +38,6 @@ steps:
     testResultsFiles: '**/*.trx'
     mergeTestResults: true
     failTaskOnFailedTests: true
-
-- task: DotNetCoreCLI@2
-  inputs:
-    command: 'publish'
-    publishWebProjects: True
-    arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
-    zipAfterPublish: True
 
 - task: PublishBuildArtifacts@1
   inputs:
