--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -15,6 +15,9 @@ jobs:
 
     steps:
 
+      - name: Install dependencies
+        run: npm install @actions/http-client
+
       - name: Update release notes
         uses: actions/github-script@v7
         with:
