--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -26,9 +26,12 @@ jobs:
             const httpm = require('@actions/http-client');
             const { owner, repo, release } = context.repo;
 
-            const releaseId = core.getInput('releaseId') ?? context.payload.release.id;
+            console.dir(context?.payload?.release);
+
+            const releaseId = core.getInput('releaseId') || context.payload.release.id;
 
             core.info(`Updating release notes for release ${releaseId}`);
+            
 
             // Get the release
             const releaseResponse = await github.rest.repos.getRelease({
