--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -30,7 +30,7 @@ jobs:
             const httpm = require('@actions/http-client');
             const { owner, repo, release } = context.repo;
 
-            core.info('Release event payload:', context.payload.release);
+            core.info(`\u001b[35mRelease event payload:${context.payload.release}`);
 
             const releaseId = '${{ inputs.releaseId }}' || context.payload.release?.id;
 
@@ -39,7 +39,7 @@ jobs:
               return;
             }
 
-            core.info('Updating release notes for release', releaseId);
+            core.info(`\u001b[35mUpdating release notes for release ${releaseId}`);
 
             // Get the release
             const releaseResponse = await github.rest.repos.getRelease({
@@ -48,7 +48,7 @@ jobs:
               release_id: releaseId
             });
 
-            core.info('Release response:', releaseResponse.status);
+            core.info(`\u001b[35mRelease response:${releaseResponse.status}`);
             core.debug('Release response:', releaseResponse.data);
             const body = releaseResponse.data.body;
 
@@ -58,10 +58,10 @@ jobs:
               .map((id) => parseInt(id, 10));
 
             
-            core.info('Work item ids:', workItemIds);
+              core.info(`\u001b[35mWork item ids: ${workItemIds}`);
 
             if (workItemIds.length === 0) {
-              core.info('No work items found in the release notes');
+              core.info(`\u001b[48;2;255;0;0mNo work items found in the release notes`);
               return;
             }
 
@@ -84,7 +84,7 @@ jobs:
                 "Microsoft.VSTS.Scheduling.RemainingWork"
               ]
             });
-            core.info('Work item batch response:', response.statusCode);
+            core.info(`\u001b[35m'Work item batch response: ${response.statusCode}`);
 
             if (response.statusCode !== 200) {
               core.setFailed('Failed to get work item details');
@@ -98,17 +98,17 @@ jobs:
               const workItem = workItems.value.find((wi) => wi.id === id);
 
               if (workItem) {
-                core.info(`Work item ${id}: ${workItem.fields['System.WorkItemType']} ${workItem.fields['System.Title']} (${workItem.fields['System.State']})`);
+                core.info(`\u001b[35mWork item ${id}: ${workItem.fields['System.WorkItemType']} ${workItem.fields['System.Title']} (${workItem.fields['System.State']})`);
 
                 const regex = new RegExp(`(?<!\[)AB#${id}\\b`, 'g');
                 newBody = newBody.replace(regex, `[AB#${id} ${workItem.fields['System.WorkItemType']} ${workItem.fields['System.Title']} (${workItem.fields['System.State']})](https://dev.azure.com/piotrkarpala0651/github-repo-ado-build/_workitems/edit/${id})`);
 
               } else {
-                core.warning(`Work item ${id} not found`);
+                core.warning(`\u001b[48;2;255;0;0mWork item ${id} not found`);
               }
             }
 
-            core.info('New release notes:', newBody);
+            core.info(`\u001b[35mNew release notes: ${newBody}`);
 
             // Update the release notes
             await github.rest.repos.updateRelease({
