--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
 
       - name: Install dependencies
-        run: npm install @actions/http-client
+        run: npm install @actions/http-client node-fetch
 
       - name: Update release notes
         uses: actions/github-script@v7
@@ -81,24 +81,32 @@ jobs:
               }
             });
 
-            const response = await http.postJson('https://dev.azure.com/${{ vars.ADO_ORG }}/${{ vars.ADO_PROJECT }}/_apis/wit/workitemsbatch?api-version=7.1-preview.1', {
-              ids: workItemIds,
-              "fields": [
-                "System.Id",
-                "System.Title",
-                "System.WorkItemType",
-                "System.State",
-                "Microsoft.VSTS.Scheduling.RemainingWork"
-              ]
+            const response = await fetch(`https://dev.azure.com/${{ vars.ADO_ORG }}/${{ vars.ADO_PROJECT }}/_apis/wit/workitemsbatch?api-version=7.1-preview.1`, {
+              method: 'POST',
+              headers: {
+                Authorization: `Basic ${auth}`,
+                'Content-Type': 'application/json'
+              },
+              body: JSON.stringify({
+                ids: workItemIds,
+                fields: [
+                  'System.Id',
+                  'System.Title',
+                  'System.WorkItemType',
+                  'System.State',
+                  'Microsoft.VSTS.Scheduling.RemainingWork'
+                ]
+              })
             });
-            core.info(`\u001b[35m'Work item batch response: ${response.statusCode}`);
+            
+            core.info(`\u001b[35m'Work item batch response: ${response.status}`);
+            const workItems = await response.json();
 
-            if (response.statusCode !== 200) {
+            if (response.status !== 200) {
               core.setFailed('Failed to get work item details');
               return;
             }
 
-            const workItems = response.result;
             var newBody = body;
 
             for (const id of workItemIds) {
