--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -23,98 +23,8 @@ jobs:
         run: npm install node-fetch
 
       - name: Update release notes
-        uses: actions/github-script@v7
+        uses: karpikpl/azdo-relese-notes-action@v1.0.0
         with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
-          script: |
-            const { owner, repo, release } = context.repo;
-
-            core.info(`\u001b[35mRelease event payload: ${context.payload.release}`);
-
-            const releaseId = '${{ inputs.releaseId }}' || context.payload.release?.id;
-
-            if (!releaseId) {
-              core.setFailed('No release id provided');
-              return;
-            }
-
-            core.info(`\u001b[35mUpdating release notes for release: ${releaseId}`);
-
-            // Get the release
-            const releaseResponse = await github.rest.repos.getRelease({
-              owner,
-              repo,
-              release_id: releaseId
-            });
-
-            core.info(`\u001b[35mRelease response: ${releaseResponse.status}`);
-            core.debug('Release response:', releaseResponse.data);
-            const body = releaseResponse.data.body;
-
-            // find all the work item ids, making sure the regex is greedy
-            const workItemIds = (body.match(/(?<!\[)AB#\d+/g) || [] )
-              .map((id) => id.replace('AB#', ''))
-              .map((id) => parseInt(id, 10));
-
-            
-              core.info(`\u001b[35mWork item ids: ${workItemIds}`);
-
-            if (workItemIds.length === 0) {
-              core.info(`\u001b[48;2;255;0;0mNo work items found in the release notes`);
-              return;
-            }
-
-            // get work item details
-            const auth = Buffer.from(`:${{ secrets.ADO_PAT }}`).toString('base64');
-
-            const response = await fetch(`https://dev.azure.com/${{ vars.ADO_ORG }}/${{ vars.ADO_PROJECT }}/_apis/wit/workitemsbatch?api-version=7.1-preview.1`, {
-              method: 'POST',
-              headers: {
-                Authorization: `Basic ${auth}`,
-                'Content-Type': 'application/json'
-              },
-              body: JSON.stringify({
-                ids: workItemIds,
-                fields: [
-                  'System.Id',
-                  'System.Title',
-                  'System.WorkItemType',
-                  'System.State',
-                  'Microsoft.VSTS.Scheduling.RemainingWork'
-                ]
-              })
-            });
-            
-            core.info(`\u001b[35mWork item batch response: ${response.status}`);
-            const workItems = await response.json();
-
-            if (response.status !== 200) {
-              core.setFailed('Failed to get work item details');
-              return;
-            }
-
-            var newBody = body;
-
-            for (const id of workItemIds) {
-              const workItem = workItems.value.find((wi) => wi.id === id);
-
-              if (workItem) {
-                core.info(`\u001b[35mWork item ${id}: ${workItem.fields['System.WorkItemType']} ${workItem.fields['System.Title']} (${workItem.fields['System.State']})`);
-
-                const regex = new RegExp(`(?<!\\[)AB#${id}\\b`, 'g');
-                newBody = newBody.replace(regex, `[AB#${id} [${workItem.fields['System.WorkItemType']}] ${workItem.fields['System.Title']} (${workItem.fields['System.State']})](https://dev.azure.com/piotrkarpala0651/github-repo-ado-build/_workitems/edit/${id})`);
-
-              } else {
-                core.warning(`\u001b[48;2;255;0;0mWork item ${id} not found`);
-              }
-            }
-
-            core.debug(`\u001b[35mNew release notes: ${newBody}`);
-
-            // Update the release notes
-            await github.rest.repos.updateRelease({
-                owner,
-                repo,
-                release_id: releaseId,
-                body: newBody
-            });
+          ado-pat: ${{ secrets.ADO_PAT }}
+          ado-org: ${{ vars.ADO_ORG }}
+          ado-project: ${{ vars.ADO_PROJECT }}
